# strom

./: .gitignore  .travis.yml  37ML_trees.nex  Makefile.am  RAxML_IC_Score_BranchLabels.T3  README.md  concatenated.con.tre  configure.ac  gostrom  paup.nex  rbcL.nex  rbcLjc.tre  rbcl10random.tre  rbcl738.nex  rbcl738nj.tre  six-taxon-input-trees.tre  six-taxon-tree-to-plot.tre  strom.conf  trees.t
share/doc/strom/: 37ML_trees.nex  37ML_trees.tre
src/: Makefile.am  chain.hpp  data.hpp  dirichlet_updater.hpp  exchangeability_updater.hpp  gamma_shape_updater.hpp  gtr_model.hpp  likelihood.hpp  lot.hpp  main.cpp  meson.build  model.hpp  node.hpp  output_manager.hpp  pwk.hpp  split.hpp  statefreq_updater.hpp  strom.hpp  tree.hpp  tree_length_updater.hpp  tree_manip.hpp  tree_scale_updater.hpp  tree_summary.hpp  tree_updater.hpp  updater.hpp  xstrom.hpp
src/subprojects/: beagle.wrap  ncl.wrap
xcode/xcode.xcodeproj/: project.pbxproj
xcode/xcode.xcodeproj/project.xcworkspace/xcuserdata/plewis.xcuserdatad/: UserInterfaceState.xcuserstate
xcode/xcode.xcodeproj/xcuserdata/plewis.xcuserdatad/xcschemes/: xcschememanagement.plist
